--- a/gridsearchcv.ipynb
+++ b/gridsearchcv.ipynb
@@ -1766,10 +1766,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save your model by updating \"your_name\" with your name\n",
-    "# and \"your_model\" with your model variable\n",
-    "# be sure to turn this in to BCS\n",
-    "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
+    "# save model\n",
     "import joblib\n",
     "filename = 'grid-search-results.sav'\n",
     "joblib.dump(grid, filename)"
@@ -1795,7 +1792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.13"
   },
   "nteract": {
    "version": "0.12.3"
